# gnome-class

./: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md
doc-internals/: book.toml
doc-internals/src/: SUMMARY.md  ch1_introduction.md  glossary.md  hir.md  overview.md  parsing.md  types.md
gobject-notes/: notes.txt  signals.txt  syntax.md
src/: ast.rs  checking.rs  errors.rs  glib_utils.rs  lib.rs
src/hir/: mod.rs
src/param/: mod.rs  test.rs
src/parser/: mod.rs
tests/: argument-types.rs  basic.rs  drop.rs  floating-refs.rs  interfaces.rs  memory-layout.rs  no-instance-private.rs  properties.rs  signals.rs
