[package]
name = "gobject-gen"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Federico Mena Quintero<federico@gnome.org>",
           "Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true
test = false

[dependencies]
error-chain = "0.11.0-rc.2"
glib = "0.4.0"
gobject-sys = "0.5.0"
libc = "0.2"
proc-macro2 = { version="0.3.6" }
quote = { version="0.5.1" }
rustfmt = "0.10.0"
syn = { version="0.13.1", features=["full"] }
unicode-xid = "0.0.4"

[dev-dependencies]
glib-sys = "0.5.0"
