[package]
name = "gobject-gen"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Federico Mena Quintero<federico@gnome.org>",
           "Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true
test = false

[dependencies]
error-chain = "0.11.0-rc.2"
glib = "^0.5.0"
glib-sys = "^0.6.0"
gobject-sys = "^0.6.0"
libc = "0.2"
proc-macro2 = { version="0.3.6", features=["nightly"] }
quote = { version="0.5.1" }
rustfmt-nightly = "0.4.2"
syn = { version="0.13.1", features=["full"] }
unicode-xid = "0.0.4"
compiletest_rs = "0.3.10"

[dev-dependencies]
glib-sys = "^0.6.0"
